--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Tarefas</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
 <div class="minha-div">
     <div class="container-input">
         <input type="text" id="campoBusca" placeholder="Digite sua Tarefa">
-        <button onclick="exibirTexto()" type="button">Adicionar Tarefa</button>
+        <butto onclick="exibirTexto()" type="button" class="btn btn-outline-primary">Adicionar Tarefa</butto>
     </div>
 
     <p class="titulo-tarefa">Tarefas:</p>
@@ -19,6 +20,8 @@
 </div>
 
 
+
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
